[tool.poetry]
name = "snapraid-cron-tool"
version = "0.0.1"
description = "A helper to schedule and run Snapraid tasks"
authors = ["Urjeet Patel <violentmagician.opensource@gmail.com>"]
licence = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
