[tool.poetry]
name = "snapraid-cron-tool"
version = "0.0.1"
description = "A helper to schedule and run Snapraid tasks"
authors = ["Urjeet Patel <violentmagician.opensource@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.9-beta.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
